std_out/main/managerial_layer-1333.err
Traceback (most recent call last):
  File "main.py", line 2, in <module>
    from network_analysis import *
  File "/cluster/raid/home/michael.tsesmelis/SideProject/network_analysis.py", line 1, in <module>
    from functions.functions_network_analysis import *
  File "/cluster/raid/home/michael.tsesmelis/SideProject/functions/functions_network_analysis.py", line 66
    if patent not in topical_assignees[assignee]["patents"]:
                                                           ^
IndentationError: unindent does not match any outer indentation level
